# emoji

./: .editorconfig  .gitignore  Makefile  README.md
backend/: migrate_catalog_to_db.py  pyproject.toml
backend/app/: __init__.py  db.py  main.py
backend/app/api/: __init__.py  deps.py  routes.py
backend/app/api/endpoints/: __init__.py  auth.py  emojis.py
backend/app/core/: config.py  security.py
backend/app/data/: emojis.py
backend/app/models/: __init__.py  emoji.py  user.py
backend/app/schemas/: __init__.py  auth.py  emoji.py  user.py
backend/tests/: conftest.py  test_auth.py  test_emojis.py  test_health.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: EmojiCard.vue  EmojiGrid.vue  EmojiSubmitForm.vue
frontend/src/composables/: useAuth.js
frontend/src/data/: mockEmojis.js
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/views/: ForgotPasswordView.vue  HomeView.vue  LoginView.vue  RegisterView.vue  ResetPasswordView.vue
